Fixed the issue of discord button not showing up in mobile view

--- a/src/Styles/styles.css
+++ b/src/Styles/styles.css
@@ -235,6 +235,9 @@ html {
     justify-content: center;
     visibility: visible;
   }
+  .homePage button {
+    margin-left: 0;
+  }
 }
 
 @media screen and (min-width: 1500px) {
